--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
 name = mclbn256
-version = 0.0.1
-author = Example Author
-author_email = author@example.com
-description = A small example package
+version = 0.1.0
+author = Wyatt Howe
+author_email = wyatt@nthparty.com
+description = Python bindings for the BN254/256 pairing-friendly curve supported by the MCl library
 long_description = file: README.rst
-long_description_content_type = text/markdown
-url = https://github.com/pypa/sampleproject
+long_description_content_type = text/x-rst
+url = https://github.com/nthparty/mclbn256
 project_urls =
-    Bug Tracker = https://github.com/pypa/sampleproject/issues
+    Bug Tracker = https://github.com/nthparty/mclbn256/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
@@ -17,12 +17,12 @@ license_files = LICENSE
 
 [options]
 package_dir =
-    = src
+    = .
 packages = find:
 python_requires = >=3.7
 
 [options.packages.find]
-where = src
+where = .
 
 [options.package_data]
-mclbn256 = ../../lib/libmclbn256.dylib
+* = ../lib/*.dylib, ../lib/*.so, ../lib/*.dll
