--- a/setup.cfg
+++ b/setup.cfg
@@ -25,4 +25,4 @@ python_requires = >=3.7
 where = .
 
 [options.package_data]
-* = ../lib/*.dylib, ../lib/*.so, ../lib/*.dll
+mclbn256 = *.dylib, *.so, *.dll
